data/derived/sp14/progs/unify/prog3274.ml.out
Characters 92-93:
  List.fold_left f base fs;;
                 ^
Error: This expression has type
         ('a -> 'b) -> 'c -> 'a -> 'd -> ('b -> 'e) -> 'e
       but an expression was expected of type ('a -> 'b) -> 'c -> 'a -> 'b
       The type variable 'b occurs inside 'd -> ('b -> 'e) -> 'e
